--- a/MiniProj2.ipynb
+++ b/MiniProj2.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorizer = sk_text.TfidfVectorizer(stop_words='english',max_features=4, min_df=1, max_df=300)\n",
+    "vectorizer = sk_text.TfidfVectorizer(stop_words='english',max_features=1000, min_df=1, max_df=300)\n",
     "matrix = vectorizer.fit_transform(clinton_trump_sklearn.All_hashtag.values)\n",
     "tfidf = matrix.toarray()"
    ]
@@ -297,7 +297,8 @@
    "outputs": [],
    "source": [
     "asc_order_centroids = kmeans.cluster_centers_.argsort()    # argsort() returns the indices that would sort an array.\n",
-    "des_order_centroids = asc_order_centroids[:,::-1] "
+    "des_order_centroids = asc_order_centroids[:,::-1] \n",
+    "print(asc_order_centroids)"
    ]
   },
   {
@@ -308,26 +309,21 @@
    },
    "outputs": [],
    "source": [
-    "terms = vectorizer.get_feature_names()\n",
+    "terms = np.array(vectorizer.get_feature_names())\n",
     "print (\"All the terms:\")\n",
     "print(terms, '\\n')\n",
+    "x = []\n",
+    "y = []\n",
     "\n",
     "for i in range(2):\n",
     "    print (\"Cluster:\", i)\n",
     "    for ind in des_order_centroids[i, :30]:\n",
+    "        if (i == 0):\n",
+    "            x.append(terms[ind])\n",
+    "        else:\n",
+    "            y.append(terms[ind])\n",
     "        print (terms[ind])\n",
     "    print()  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "asc_order_centroids"
    ]
   },
   {
@@ -347,9 +343,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "wordcloud = WordCloud().generate(str(x))\n",
+    "plt.figure(figsize=(12,5))\n",
+    "plt.imshow(wordcloud, interpolation='bilinear')  #  bilinear interpolation performs linear interpolation in 2D space. \n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wordcloud = WordCloud().generate(str(y))\n",
+    "plt.figure(figsize=(12,5))\n",
+    "plt.imshow(wordcloud, interpolation='bilinear')  #  bilinear interpolation performs linear interpolation in 2D space. \n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -380,13 +397,13 @@
    },
    "outputs": [],
    "source": [
-    "error = np.zeros(4)\n",
-    "for k in range(1,4):\n",
+    "error = np.zeros(20)\n",
+    "for k in range(1,20):\n",
     "    kmeans = sk_cluster.KMeans(n_clusters=k, n_init=10, max_iter=500)\n",
     "    kmeans.fit_predict(tfidf.transpose())\n",
     "    error[k] = kmeans.inertia_\n",
     "\n",
-    "plt.plot(range(1, 4), error[1:])\n",
+    "plt.plot(range(1, 20), error[1:])\n",
     "plt.xlabel('Number of clusters')\n",
     "plt.ylabel('SSE')"
    ]
@@ -411,7 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kmeans = sk_cluster.KMeans(n_clusters=6, n_init=10, max_iter=300)\n",
+    "kmeans = sk_cluster.KMeans(n_clusters=3, n_init=10, max_iter=300)\n",
     "kmeans_label = kmeans.fit_predict(tfidf)"
    ]
   },
@@ -456,9 +473,40 @@
    "source": [
     "confusion = metrics.confusion_matrix(truth, kmeans.labels_, labels=[0, 1])   # first row: 0 ; second row: 1\n",
     "print(confusion)\n",
+    "print(\"Precision Score: \")\n",
     "print(metrics.precision_score(truth, kmeans.labels_, average='weighted')) # weighted: the average precision of all clusters is returned\n",
+    "print(\"Recall Score: \")\n",
     "print(metrics.recall_score(truth, ag2.labels_, average='weighted'))  # weighted: the average recall of all clusters is returned\n",
+    "print(\"F1 Score: \")\n",
     "print(metrics.f1_score(truth, ag2.labels_, average= 'weighted'))     # weighted: the average f1 of all clusters is returned\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asc_order_centroids = kmeans.cluster_centers_.argsort()    # argsort() returns the indices that would sort an array.\n",
+    "des_order_centroids = asc_order_centroids[:,::-1] \n",
+    "print(asc_order_centroids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "terms = np.array(vectorizer.get_feature_names())\n",
+    "print (\"All the terms:\")\n",
+    "print(terms, '\\n')\n",
+    "\n",
+    "for i in range(3):\n",
+    "    print (\"Cluster:\", i)\n",
+    "    for ind in des_order_centroids[i, :30]:\n",
+    "        print (terms[ind])\n",
+    "    print() "
    ]
   },
   {
